--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
   <div class="container">
-    <h1 class="text-center text-primary mt-5 ">Type Your Book Name </h1>
+    <h1 class="text-center mt-5 head">Type Your Book Name </h1>
 
     <!-- input search -->
     <div class="input-group mb-3 w-50 mx-auto mt-4">
